# py-acidgenomes

./: README.md  acidgenomes.code-workspace  pyproject.toml  requirements.txt  venv.sh
src/acidgenomes/: __init__.py  _cache.py  _classes.py  _constructors.py  _data.py  _detect.py  _genome_build.py  _genome_version.py  _mapping.py  _strip_versions.py  _update.py
tests/: test_acidgenomes.py
